# AptSourcesList.py

./: .gitignore  ReadMe.md  grammar.yug  setup.cfg
AptSourcesList/: Record.py  RecordParser.py  __init__.py
AptSourcesList/parserBundle/compiled/TatSu/: apt_source.ebnf
AptSourcesList/parserBundle/compiled/antlr4/: apt_sourceLexer.interp  apt_sourceLexer.py  apt_sourceListener.py  apt_sourceParser.py
AptSourcesList/parserBundle/compiled/parglare/: apt_source.pglr
AptSourcesList/parserBundle/compiled/parsimonious/: apt_source.parsimonious
AptSourcesList/parserBundle/compiled/waxeye/: apt_source.py
AptSourcesList/parserBundle/schemas/capless/: apt_source.json
AptSourcesList/parserBundle/schemas/iterless/: apt_source.json
AptSourcesList/parserBundle/wrappers/: apt_source.py
