[metadata]
name = AptSourcesList
#version = 0.1
author = KOLANICH
url = https://gitlab.com/KOLANICH/AptSourcesList.py
description = A package to parse and serizlize APT source.list files
long_description = file: ReadMe.md
keywords = APT, debian, ubuntu
license = Unlicense
classifiers =
	Programming Language :: Python
	Programming Language :: Python :: 3
	Development Status :: 4 - Beta
	Environment :: Other Environment
	Intended Audience :: Developers
	License :: Public Domain
	License :: Public Domain :: Unlicense
	Operating System :: OS Independent
	Topic :: Software Development :: Libraries :: Python Modules
	Topic :: Security
	Topic :: Package  Management

[options]
python_requires = >=3.4
zip_safe = True
include_package_data = True
packages = find:
setup_requires = setuptools>=42; wheel; setuptools_scm[toml]>=3.4.3

[options.extras_require]
waxeye = waxeye @ git+https://github.com/waxeye-org/waxeye.git#subdirectory=src/python
parglare = parglare @ git+https://github.com/igordejanovic/parglare.git
antlr = antlr4-python3-runtime @ git+https://github.com/antlr/antlr4.git#subdirectory=runtime/Python3
